create basic layout and components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1>app works</h1>
+<div class="app-container">
+  <app-nav-bar></app-nav-bar>
+
+  <div class="container-xl">
+    <router-outlet></router-outlet>
+  </div>
+
+  <app-footer></app-footer>
+</div>
