--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,43 @@
-<p>nav-bar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-xl d-flex ">
+    <!-- Image and text -->
+    <a class="navbar-brand" routerLink="/">
+      <img
+        src="../../../assets/logo-nav.png"
+        height="30"
+        class="d-inline-block align-top"
+        alt=""
+      />
+    </a>
+
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse flex-grow-1" id="navbarNav">
+      <ul class="navbar-nav w-100">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerlink="/home"
+            >Home <span class="sr-only">(current)</span></a
+          >
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerlink="/products">Products</a>
+        </li>
+        <li class="nav-item ml-auto">
+          <a class="nav-link" routerlink="/login"
+            ><i class="fas fa-sign-in-alt"></i>Login</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
