--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="bg-dark p-3">
+  <div class="container-xl">
+    <p class="text-center text-white mb-0">	&copy; {{currentYear}} DongNT11. All rights reserved </p>
+  </div>
+</footer>
