implement product detail component

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -18,6 +18,7 @@
         <div
           class="product-color-preview"
           [style.background-color]="item.color"
+          [routerLink]="[item.id]"
         ></div>
         <div class="card-body">
           <h5 class="card-title text-capitalize">{{ item.name }}</h5>
