implement auth guard to my profile

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,7 @@
 <footer class="bg-dark p-3">
   <div class="container-xl">
-    <p class="text-center text-white mb-0">	&copy; {{currentYear}} DongNT11. All rights reserved </p>
+    <p class="text-center text-white mb-0">
+      &copy; {{ currentYear }} ThuyCT6. All Rights Reserved
+    </p>
   </div>
 </footer>
