--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<div class="w-50 mx-auto mt-5 shadow-lg border rounded p-4">
+  <h4 class="text-center text-uppercase">Login</h4>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input
+      type="email"
+      [(ngModel)]="user.email"
+      class="form-control"
+      aria-describedby="emailHelp"
+    />
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" [(ngModel)]="user.password" class="form-control" />
+  </div>
+  <button class="btn btn-primary" (click)="onLogin()">Login</button>
+</div>
