--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,23 +1,22 @@
-<!-- <p> {{product | json}} </p> -->
-
 <div class="pt-4">
   <div class="row">
     <div class="col">
-      <button class="btn btn-link" routerLink="../">Back to products</button>
+      <button class="btn btn-primary" routerLink="../">Back to Products</button>
     </div>
   </div>
-  <div class="row pt-4">
+
+  <div class="row mt-2">
     <div class="col-4">
       <div
         class="product-color-preview"
         [style.background-color]="product.color"
       ></div>
     </div>
-    <div class="col-8" *ngIf="product">
+    <div class="col-8">
       <h3 class="text-capitalize">{{ product.name }}</h3>
-      <p><span> Year: </span> {{ product.year }}</p>
-      <p><span> Pantone-value: </span> {{ product.pantone_value }}</p>
-      <p><span> Price: </span> {{ product.price | currency: "USD" }}</p>
+      <p><span>Year:</span> {{ product.year }}</p>
+      <p><span>Pantone Value: </span> {{ product.pantone_value }}</p>
+      <p><span>Price: </span> {{ product.price | currency: "USD" }}</p>
     </div>
   </div>
 </div>
