--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -5,16 +5,17 @@
         <div class="form-group">
           <input
             type="text"
+            class="form-control"
             #search
             (keyup)="onKeyUp(search.value)"
-            class="form-control"
             placeholder="Filter..."
           />
         </div>
       </div>
     </div>
-    <div class="product-container py-4">
+    <div class="product-container">
       <div class="card shadow" *ngFor="let item of filtered">
+        <!-- [ngStyle]="{ 'background-color': item.color }" -->
         <div
           class="product-color-preview"
           [style.background-color]="item.color"
@@ -23,32 +24,34 @@
         <div class="card-body">
           <h5 class="card-title text-capitalize">{{ item.name }}</h5>
           <p class="card-text text-info">
-            <span>Panton value: </span> {{ item.pantone_value }}
+            <span>Pantone Value: </span> {{ item.pantone_value }}
           </p>
-          <p class="card-text text-info">
-            <span> Year: </span> {{ item.year }}
-          </p>
+          <p class="card-text text-info"><span>Year: </span> {{ item.year }}</p>
           <p class="card-text text-warning">
-            <span> Price: </span> {{ item.price }}
+            <span>Price: </span> {{ item.price | currency: "USD" }}
           </p>
         </div>
       </div>
     </div>
 
-    <nav class="mt-4">
+    <nav>
       <ul class="pagination">
-        <li class="page-item">
-          <span class="page-link" href="#">Previous</span>
+        <li class="page-item" [class.disabled]="currentPage == 1">
+          <span class="page-link" (click)="onClickPrevious()">Previous</span>
         </li>
         <li
           class="page-item"
           *ngFor="let page of pages"
+          [class.active]="currentPage === page"
           (click)="goToPage(page)"
-          [class.active]="current_page === page"
         >
-          <span class="page-link" href="#">{{ page }}</span>
+          <span class="page-link" href="#">
+            {{ page }}
+          </span>
         </li>
-        <li class="page-item"><span class="page-link" href="#">Next</span></li>
+        <li class="page-item" [class.disabled]="currentPage == pages.length">
+          <span class="page-link" (click)="onClickNext()">Next</span>
+        </li>
       </ul>
     </nav>
   </div>
