--- a/src/app/components/products/products.component.scss
+++ b/src/app/components/products/products.component.scss
@@ -1,19 +1,20 @@
 .product-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 30px;
-} 
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
 
 .card {
-    p {
-        margin-bottom: 10px;
-    }
+  p {
+    margin-bottom: 10px;
+  }
 }
 
 .product-color-preview {
-    height: 150px;
+  height: 150px;
+  cursor: pointer;
 }
 
 span.page-link {
-    cursor: pointer;
+  cursor: pointer;
 }
