--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,17 +1,50 @@
-<div class="w-50 mx-auto mt-5 shadow-lg border rounded p-4">
+<form class="w-50 mx-auto mt-5 shadow-lg border rounded p-4" ngForm #f="ngForm" (ngSubmit)="onLogin()">
   <h4 class="text-center text-uppercase">Login</h4>
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
     <input
       type="email"
+      name="email"
       [(ngModel)]="user.email"
       class="form-control"
+      #email="ngModel"
+      (blur)="log(email)"
       aria-describedby="emailHelp"
+      required
+      pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
     />
+    <div
+      class="alert alert-danger"
+      role="alert"
+      *ngIf="email.touched && email.errors"
+    >
+      <ng-container *ngIf="email.errors.required"
+        >Email is required</ng-container
+      >
+      <ng-container *ngIf="email.errors.pattern"
+        >Email is incorrect</ng-container
+      >
+    </div>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
-    <input type="password" [(ngModel)]="user.password" class="form-control" />
+    <input
+      type="password"
+      name="password"
+      [(ngModel)]="user.password"
+      #password="ngModel"
+      class="form-control"
+      required
+    />
+    <div
+      *ngIf="password.errors && password.touched"
+      class="alert alert-danger"
+      role="alert"
+    >
+      <ng-container *ngIf="password.errors.required">
+        Password is required
+      </ng-container>
+    </div>
   </div>
-  <button class="btn btn-primary" (click)="onLogin()">Login</button>
-</div>
+  <button class="btn btn-primary" [disabled]="f.invalid">Login</button>
+</form>
