--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -1,3 +1,22 @@
-<h3>My Profile</h3>
+<div class="w-50 shadow border p-4 my-5 mx-auto"> 
+  <h3 class="text-center">User info</h3>
+  <div class="form-group">
+    <label>Email address</label>
+    <input type="email" class="form-control" [(ngModel)]="user.email"/>
+  </div>
+  <div class="form-group">
+    <label>First Name</label>
+    <input type="text" class="form-control" [(ngModel)]="user.first_name"/>
+  </div>
+  <div class="form-group">
+    <label>Last Name</label>
+    <input type="text" class="form-control" [(ngModel)]="user.last_name"/>
+  </div>
+  <div class="form-group">
+    <label>Avatar URL</label>
+    <input type="text" class="form-control" [(ngModel)]="user.avatar"/>
+  </div>
 
-<!-- <pre> {{user | json}} </pre> -->
+
+  <button class="btn btn-primary" (click)="onSave()">Submit</button>
+</div>
