implement walmart-clone app

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -8,6 +8,8 @@
         alt=""
       />
     </a>
+
+    <!-- Icon menu chứa các navbar -->
     <button
       class="navbar-toggler"
       type="button"
