--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -62,7 +62,9 @@
     <nav>
       <ul class="pagination">
         <li class="page-item" [class.disabled]="currentPage == 1">
-          <span class="page-link" (click)="onClickPrevious()">Previous</span>
+          <span class="page-link" (click)="goToPage(currentPage - 1)"
+            >Previous</span
+          >
         </li>
         <li
           class="page-item"
@@ -75,7 +77,9 @@
           </span>
         </li>
         <li class="page-item" [class.disabled]="currentPage == pages.length">
-          <span class="page-link" (click)="onClickNext()">Next</span>
+          <span class="page-link" (click)="goToPage(currentPage + 1)"
+            >Next</span
+          >
         </li>
       </ul>
     </nav>
